Add Nest supplier orders list slice
